--- a/solutions/Virtual-Assistant/src/csharp/skills/todoskill/appsettings.json
+++ b/solutions/Virtual-Assistant/src/csharp/skills/todoskill/appsettings.json
@@ -7,11 +7,11 @@
   "defaultLocale": "en-us",
   "languageModels": {
     "en": {
-      "botFilePath": ".\\LocaleConfigurations\\YOUR_LOCALE_PATH.bot",
+      "botFilePath": ".\\LocaleConfigurations\\ToDoSkillen.bot",
       "botFileSecret": ""
     },
     "zh": {
-      "botFilePath": ".\\LocaleConfigurations\\YOUR_LOCALE_PATH.bot",
+      "botFilePath": ".\\LocaleConfigurations\\ToDoSkillzh.bot",
       "botFileSecret": ""
     }
   },
@@ -21,7 +21,7 @@
   ],
   "parameters": [],
   "configuration": {
-    "TaskServiceProvider": "Outlook",
+    "TaskServiceProvider": "OneNote",
     "ReadSize": "3",
     "DisplaySize": "6"
   }
